<resources>
    <string name="app_name">Licenta_Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_up">Sign Up</string>
    <string name="sing_up1">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="email_addres">Email Addres</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password (At least 6 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_in1">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="we_need_your_email">We need your email:</string>
    <string name="go_back">Go Back</string>
    <string name="reset_password1">Reset Password</string>
</resources>