<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SingUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="118dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/circular_std"
        android:text="@string/sing_up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#d0d1d4"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#d0d1d4"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:textColor="#d0d1d4"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#d0d1d4"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:text="@string/already_have_an_account"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aready_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sing_in"
            android:textColor="#d9519d"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_button_background"
        android:enabled="true"
        android:text="Sign Up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <ProgressBar
        android:id="@+id/signUpProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/endColor"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>