<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ResetPasswordFragment">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="139dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_splash_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/circular_std"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#d0d1d4"
        android:textColorHint="#d0d1d4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="&lt; Go Back"
            android:textColor="#9A3A73"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/we_need_your_email"
        android:textColor="#9A3A73"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/reset_password1"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/transWhite"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <TextView
        android:id="@+id/responseMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ProgressBar
        android:id="@+id/resetPasswordProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/endColor"
        android:visibility="invisible"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/responseMessage"
        app:layout_constraintStart_toStartOf="@+id/responseMessage"
        app:layout_constraintTop_toBottomOf="@+id/responseMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>